--- a/Components/App.razor
+++ b/Components/App.razor
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="/css/admin.css" />
     <link rel="stylesheet" href="/css/aboutus.css" />
     <link rel="stylesheet" href="/css/contactus.css" />
+    <link rel="stylesheet" href="/css/productcard.css" />
 
     <link rel="stylesheet" href="MaisonTelecom.styles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -28,6 +29,7 @@
 <body>
     <Routes />
     <script src="_framework/blazor.web.js"></script>
+    <script src="js/site.js"></script>
 </body>
 
 </html>
