--- a/Components/Layout/Header.razor
+++ b/Components/Layout/Header.razor
@@ -12,11 +12,9 @@
                 <button type="submit"><i class="fas fa-search"></i></button>
             </div>
             <div class="user-icons">
-                <a href="#"><i class=""></i>HOME</a>
+                <a href="/"><i class=""></i>HOME</a>
                 @* <a href="#"><i class=""></i>SHOP</a> *@
-                <a href="#"><i class="far fa-heart"></i></a>
-                <a href="#"><i class="fas fa-shopping-cart"></i></a>
-              
+                <a href="/wishlist"><i class="fa-regular fa-heart"></i></a>      <a href="/cart"><i class="fa-solid fa-cart-shopping"></i></a>
             </div>
         </nav>
     </div>
