--- a/wwwroot/css/wishlist.css
+++ b/wwwroot/css/wishlist.css
@@ -21,7 +21,7 @@
     }
 
 .continue-shopping {
-    background: none;
+    background-color: blue;
     border: 1px solid #ccc;
     padding: 0.5rem 1rem;
     cursor: pointer;
